--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -1,1 +1,135 @@
-/*# sourceMappingURL=main.css.map */
+@import './colors';
+
+@mixin center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+@mixin buttons{
+    color: $button-text-color;
+    border: solid 1px;
+    border-radius: 20px;
+    background-color: $accent-colour;
+    cursor: pointer;
+    font-size: 18px;
+}
+
+@mixin section{
+    background-color: $background-color;
+    position: absolute;
+    border: solid 1px;
+    border-color: $section-background;
+    background-color: $section-background;
+    border-radius: 6px;
+    align-items: center;
+    transform: translate(-50%);
+}
+
+@mixin heading{
+    align-items: center;
+    text-align: center;
+}
+
+
+/*General*/
+
+body{
+    background-color: $background-color;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    @include center;
+
+}
+
+img {
+    width: 280px;
+    padding: 0;
+}
+
+input{
+    height: 40px;
+    width: 100%;
+    font-size: 17px;
+    display: block;
+    line-height: 30px;
+    padding-left: 40px;
+    border-radius: 2px;
+    border: solid 1px $input-border;
+    margin: 9px auto;
+}
+
+
+/*Start Page*/
+
+.login-section{
+    @include section;
+    padding: 20px 50px;
+    margin: 100px auto;
+}
+
+.btn-start{
+    @include buttons;
+    padding: 10px;
+    width: 30%;
+    height: 40px;
+    transform: translate(110%);
+    font-weight: bold;
+    margin: 5px auto;
+}
+
+.form-heading{
+    @include heading;
+
+    &p{
+        margin-bottom: 0px;
+    }
+
+    &h1{
+        margin-top: 0px;
+    }
+}
+
+/*Sign Up Page*/
+
+.form-section {
+    @include section;
+    padding: 20px 130px;
+    margin: 0px auto;
+}
+
+.icon {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-size: 20px;
+    transform: translateX(50%);
+    color: #808080;
+    margin: 8px auto;
+}
+
+.btn {
+    @include buttons;
+    padding: 8px;
+    width: 100%;
+    transform: translate(10%);
+    margin: 10px auto;
+}
+
+/*Login Page*/
+
+.login-section{
+    @include section;
+    padding: 20px 130px;
+    margin: 60px auto;
+}
+
+.btn-login{
+    @include buttons;
+    padding: 8px;
+    width: 100%;
+    transform: translate(10%);
+    margin: 10px auto;
+}
